--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dexie": "^4.2.1",
     "zustand": "^5.0.9",
     "jspdf": "2.5.1",
-    "html2canvas": "1.4.1"
+    "html2canvas": "1.4.1",
+    "docx": "8.5.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
