--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "uuid": "^13.0.0",
     "lucide-react": "^0.562.0",
     "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.0",
     "dexie": "^4.2.1",
     "zustand": "^5.0.9",
     "jspdf": "2.5.1",
