--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "zustand": "^5.0.9",
     "jspdf": "2.5.1",
     "html2canvas": "1.4.1",
-    "docx": "8.5.0"
+    "docx": "8.5.0",
+    "framer-motion": "11.0.8"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
